# lung_cancer_detection

./: .gitignore  .pre-commit-config.yaml  README.md  lung_image_sets.dvc  pyproject.toml
.dvc/: config
.github/workflows/: pre-commit.yml  pytest.yml
conf/data_loading/: data_loading.yaml
conf/inference/: inference.yaml
conf/logging/: logging.yaml
conf/model/: model.yaml
conf/training/: training.yaml
lung_cancer_detection/: dataset.py  infer.py  model.py  train.py
models/: epoch=04-val_loss=0.1926.ckpt.dvc
serving/: .gitignore  docker-compose.yaml  inference_model.py  proxy_server.py
serving/backend/: Dockerfile  inference_model.py
serving/backend/lung_cancer_model/: conda.yaml  python_env.yaml  requirements.txt
serving/backend/mlruns/0/: meta.yaml
serving/frontend/: Dockerfile  proxy_server.py
serving/frontend/templates/: index.html
serving/lung_cancer_model/: MLmodel
serving/mlruns/0/: meta.yaml
tests/: test_ci.py  test_config.py  test_datamodule.py  test_prediction.py
tests/test_config/: test_config.yml
