[project]
name = "lung-cancer-detection"
version = "0.1.0"
description = "Lung cancer detection solution utuluzing MLOps techniques"
authors = [
    {name = "mishasurmach",email = "surmach.mikhail@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytorch-lightning (>=2.5.1.post0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "torchvision (>=0.22.0,<0.23.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
fire = "^0.7.0"
pre-commit = "^4.2.0"
