[project]
name = "lung-cancer-detection"
version = "0.1.0"
description = "Lung cancer detection solution utuluzing MLOps techniques"
authors = [
    {name = "mishasurmach",email = "surmach.mikhail@gmail.com"}
]
packages = [
    { include = "lung_cancer_detection", from = "."}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytorch-lightning (>=2.5.1.post0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "torchvision (>=0.22.0,<0.23.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "mlflow (>=2.22.0,<3.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "dvc (>=3.59.2,<4.0.0)"
]

[tool.flake8]
max-line-length = 88

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
fire = "^0.7.0"
pre-commit = "^4.2.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-regressions = "^2.7.0"
